feat: integrate Google OAuth support, add account page, and enhance sign-in functionality

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,11 @@ AUTH_SECRET=
 AUTH_GITHUB_ID=
 AUTH_GITHUB_SECRET=
 
+# Google OAuth app credentials
+AUTH_GOOGLE_ID=
+AUTH_GOOGLE_SECRET=
+
+
 ###########################################
 # Database connection settings
 ###########################################
